--- a/public/todo.org
+++ b/public/todo.org
@@ -1,19 +1,9 @@
 * To do
 ** CSS
 *** styling for window resize
-*** DONE shadows on the tiles
 ** Javascript
-*** DONE timer
-*** DONE win condition
-**** DONE check for valid word
-**** DONE increment score
-**** DONE check score value to see if it's greater than 'winscore'
-**** DONE sets css display to visible for kitten object
-*** end condition
-*** kitty
-**** speaks congratulations
-**** speaks derision
-*** DONE error messaging (html)
+*** button to finish game
+*** dynamic win condition (% of words)
 *** sound effects
 **** correct word
 **** incorrect word
@@ -23,19 +13,8 @@
 **** valid letter
 **** timer (out?)
 *** <5 seconds remaining
-**** animation
 **** sound
 ** Ruby
-*** boxes categorized and sorted
-**** DONE Load word list from file (download file)
-**** DONE alphabatize words
-**** DONE unique list
-**** DONE bucket by length
-**** DONE iterate from 3 to max letters
-*** randomize initial word
-**** DONE select word with max letters (randomly)
-**** DONE choose subwords
-**** DONE comprehensive word list
 *** refactor
 *** optimize
 
