--- a/experiment/newlayouttodo.org
+++ b/experiment/newlayouttodo.org
@@ -1,4 +1,6 @@
 * wordplay
 ** create background differentiaion for container for letter tiles
 ** button styling
+** add in kitten(s)
+** Add in messages
 ** 
